--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "Instagram": "chris.tianid",
+  "ownerNumber": ["6288232154376@s.whatsapp.net"],
+  "ownerName": ["Abiofc"],
+  "GROUPBOT": "https://chat.whatsapp.com/ERrRJ18SMI20NZbYvq7E3w",
   "botName": "Izumi - MD",
   "sessionName": "session",
   "pathimg": "./media/chris2.jpg",
