--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "GROUPBOT": "https://chat.whatsapp.com/ERrRJ18SMI20NZbYvq7E3w",
   "botName": "Izumi - MD",
   "sessionName": "session",
-  "pathimg": "./media/chris2.jpg",
+  "pathimg": "./media/d48ff2bce171579c3d719328ffbccc3b.jpg",
   "gamewaktu": 90,
   "limitCount": 40,
   "gcount": {
