--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "ownerNumber": ["6288232154376@s.whatsapp.net"],
   "ownerName": ["Abiofc"],
   "GROUPBOT": "https://chat.whatsapp.com/ERrRJ18SMI20NZbYvq7E3w",
-  "botName": "Izumi - MD",
+  "botName": "Yukino - MD",
   "sessionName": "session",
   "pathimg": "./media/d48ff2bce171579c3d719328ffbccc3b.jpg",
   "gamewaktu": 90,
